--- a/Web/www/index.html
+++ b/Web/www/index.html
@@ -23,21 +23,78 @@
 
   <body>
 
-      <header>
-        <h1 class="text-center">Emoji</h1>
+    <!-- Navigation -->
+    <nav class="navbar navbar-default navbar-custom navbar-fixed-top">
+        <div class="container-fluid">
+            <!-- Brand and toggle get grouped for better mobile display -->
+            <div class="navbar-header page-scroll">
+                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
+                    <span class="sr-only">Toggle navigation</span>
+                    Menu <i class="fa fa-bars"></i>
+                </button>
+                <a class="navbar-brand" href="index.html">Emoji</a>
+            </div>
 
-        <nav class="navbar navbar-default">
-          <u1 class="nav navbar-nav">
-            <li><a href="#">Home</a></li>
-            <li><a href="./developpement.html">Développment</a></li>
-            <li><a href="./conclusion.html">Documentation</a></li>
-            <li><a href="./module.html">Module</a></li>
-            <li><a href="./propos.html">Module</a></li>
+            <!-- Collect the nav links, forms, and other content for toggling -->
+            <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+                <ul class="nav navbar-nav navbar-right">
+                  <u1 class="nav navbar-nav">
+                    <li><a href="#">Home</a></li>
+                    <li><a href="./developpement.html">Développment</a></li>
+                    <li><a href="./conclusion.html">Documentation</a></li>
+                    <li><a href="./module.html">Module</a></li>
+                    <li><a href="./propos.html">A propos</a></li>
+                  </u1>
+                </ul>
+            </div>
+            <!-- /.navbar-collapse -->
+        </div>
+        <!-- /.container -->
+    </nav>
 
-          </u1>
-        </nav>
-      </header>
-      <!-- end of header -->
+    <div class="wrapper">
+      <!-- section header-->
+      <div class="section section-header">
+                <div class="parallax pattern-image">
+                    <img src="img/header" style="transform: translate3d(0px, 0px, 0px);">
+<!--                     <img src="/assets/img/header6.jpg"/> -->
+                    <div class="container">
+                        <div class="content">
+                            <h1>Creative Tim</h1>
+                            <div class="separator-container">
+                                <div class="separator line-separator">∎</div>
+                            </div>
+                            <h5>Awesome Bootstrap freebies and templates to build better websites</h5>
+                        </div>
+                    </div>
+                </div>
+                <a href="http://presentation.creative-tim.com/" data-scroll="true" data-id="#whoWeAre" class="scroll-arrow hidden-xs hidden-sm">
+                <i class="fa fa-angle-down"></i>
+                </a>
+      </div>
+      <!-- end of section header -->
+
+    <div class="section section-introduction">
+      <div class="text-area">
+        <div class="container">
+            <div class="row">
+                <div class="title" id="animationTest">
+                    <h2>About Creative Tim</h2>
+                    <div class="separator-container">
+                        <div class="separator line-separator">∎</div>
+                    </div>
+                    <p class="large">
+                        Creative Tim is a startup that creates design tools that make the web development process faster and easier. We love the web and care deeply for how users interact with a digital product. We power businesses and individuals to create better looking web projects around the world.
+                    </p>
+                </div>
+            </div>
+        </div>
+      </div>
+    </div>
+
+    </div>
+    <!--wrapper end-->
+
 
       <div class=container"">
         <h1 class="text-center"> Mon grand titre</h1>
