--- a/Web/www/index.html
+++ b/Web/www/index.html
@@ -48,9 +48,9 @@
                     <li class="dropdown">
                       <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Graphiques <span class="caret"></span></a>
                       <ul class="dropdown-menu">
-                        <li><a href="#">Arbre des débats</a></li>
-                        <li><a href="#">Frise chronologique</a></li>
-                        <li><a href="#">Cartographie des acteurs</a></li>
+                        <li><a href="./graphiques.html#arbre-debats">Arbre des débats</a></li>
+                        <li><a href="./graphiques.html#frise-chronologique">Frise chronologique</a></li>
+                        <li><a href="./graphiques.html">Cartographie des acteurs</a></li>
                       </ul>
                     </li>
 
@@ -77,7 +77,7 @@
       <!-- section header-->
       <div class="section section-header">
                 <div class="parallax pattern-image">
-                    <img src="img/header" style="transform: translate3d(0px, 0px, 0px);">
+                    <img src="img/background.png" style="transform: translate3d(0px, 0px, 0px);">
 <!--                     <img src="/assets/img/header6.jpg"/> -->
                     <div class="container">
                         <div class="content">
@@ -282,12 +282,8 @@
 
     <footer>
       <nav>
-        <ul>
-          <li>
-            <a href="#">A propos</a>
-          </li>
 
-        </ul>
+            <p> © Copyright 2016 Télécom ParisTech </p>
       </nav>
     </footer>
 
