--- a/Web/www/politique.html
+++ b/Web/www/politique.html
@@ -73,6 +73,54 @@
         <!-- /.container -->
     </nav>
 
+    <div class="wrapper">
+      <div class="section" id = "frise-chronologique">
+        <div class="text-area">
+          <div class="container">
+              <div class="row">
+                  <div class="title" >
+                      <h2>Le consortium Unicode</h2>
+                      <div class="separator-container">
+                          <div class="separator line-separator">∎</div>
+                      </div>
+                    </br>
+                    <p align="left">
+                    Le consortium Unicode fut instauré en janvier 1991 en Californie, quatre ans après la fondation de l'encodage de caractères spéciaux.
+Unicode fut d'abord un projet lancé en 1987 après des échanges entre les ingénieurs d'Apple et de Xerox : Joe  Becker, Lee Collins et Mark Davis. Dès début 1988, trois enquêtes principales avaient été menées :
+
+-Comparaisons des encodages de longueur fixe et variable.
+-Détermination de la mémoire requise pour le stockage des caractères spéciaux.
+-Décompte préliminaire des caractères de tous les alphabets.
+
+En s'appuyant sur ces enquêtes, et sur leur expérience dans l'encodage de caractères, Becker, Collins et Davis décidèrent de l'architecture de la base des données Unicode.
+
+En automne 1988, Collins commença à construire cette base de données avec les caractères du chinois simplifié.
+Dans le design original, les caractères n'étaient pas composites (au contraire d'aujourd'hui où l'on peut par exemple choisir la couleur de peau en ajoutant un caractère spécial).
+
+En début 1989, Unicode gagne la participation de nouvelles entreprises. C'est à cette période que Ken Whistler et Mike Kernaghan de Metaphor, Karen Smith-Yoshimura et Joan Aliprand de RLG, et Glenn Wright de Sun rejoignent le groupe et commencent à contribuer à la base de données.
+
+Mike Kernaghan, Bill English, Mark Davis et Asmus Freytag ont organisé la plupart des aspects légaux d'Unicode, Inc. qui furent approuvés le 3 Janvier 1991 en Californie.
+
+Le but officiel original du Consortium Unicode était "standardiser, étendre et promouvoir l'encodage de caractères Unicode, un encodage de longueur fixe de 16 bits pour plus de 60 000 caractères possibles." Cette déclaration a depuis été actualisée pour tenir compte du fait que l'Unicode Standard peut à présent comprendre des caractères de plus de 16 bits.
+
+Aujourd'hui, de nombreuses organisations sont membres votants du consortium, principalement des organisations gouvernementales (Oman, Bengladesh, Inde…) et des marque d'OS (Google, Apple, Windows…)
+
+L'organe du Consortium chargé des émojis est le sous-comité Unicode pour les émojis. Il s'agit d'un sous-comité du comité technique Unicode (http://www.unicode.org/consortium/tc-procedures.html#13). Les co-présidents du comité sont aujourd'hui Mark Davis (Google) et Peter Edberg (Apple). Le rôle du comité consiste à :
+- Mettre à jour, revoir et étendre la documentation émoji (par exemple la charte émoji Unicode).
+-Prendre en compte et passer en revue les demandes d'ajout d'émojis.
+-Rédiger des propositions pour de nouveaux personnages et mécanismes émojis pour les soumettre au Comité technique Unicode.
+-Trouver une solution à long terme pour implémenter les émojis en tant qu'images (stickers).
+
+Ce comité se réunit toutes les semaines et tous les membres du consortium Unicode peuvent participer et demander à être ajouté à la mailing list du sous-comité. Ce dernier met à jour la liste des émojis standards tous les ans en mai.
+                  </p>
+                  </div>
+              </div>
+            </div>
+          </div>
+        </div>
+
+    </div>
+
     <footer>
       <nav>
             <p> © Copyright 2016 Télécom ParisTech </p>
