--- a/Web/www/graphiques.html
+++ b/Web/www/graphiques.html
@@ -28,7 +28,7 @@
 
 <body class="no-touch">
   <!-- Navigation -->
-  <nav class="navbar navbar-default navbar-fixed-top  navbar-transparent" role="navigation">
+  <nav class="navbar navbar-default navbar-fixed-top" >
       <div class="container-fluid">
           <!-- Brand and toggle get grouped for better mobile display -->
           <div class="navbar-header page-scroll">
@@ -56,7 +56,7 @@
                   <li class="dropdown">
                     <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Développment <span class="caret"></span></a>
                     <ul class="dropdown-menu">
-                      <li><a href="#">topic1</a></li>
+                      <li><a href="./politique.html">Politique et Droit</a></li>
                       <li><a href="#">topic2</a></li>
                       <li><a href="#">topic3</a></li>
                     </ul>
