--- a/Web/www/index.html
+++ b/Web/www/index.html
@@ -43,10 +43,10 @@
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav navbar-right">
                   <u1 class="nav navbar-nav">
-                    <li><a href="#">Home</a></li>
+                    <li><a href="./index.html">Home</a></li>
 
                     <li class="dropdown">
-                      <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Graphiques <span class="caret"></span></a>
+                      <a href="./graphiques.html" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Graphiques <span class="caret"></span></a>
                       <ul class="dropdown-menu">
                         <li><a href="./graphiques.html#arbre-debats">Arbre des débats</a></li>
                         <li><a href="./graphiques.html#frise-chronologique">Frise chronologique</a></li>
@@ -55,11 +55,11 @@
                     </li>
 
                     <li class="dropdown">
-                      <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Développment <span class="caret"></span></a>
+                      <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Développment<span class="caret"></span></a>
                       <ul class="dropdown-menu">
-                        <li><a href="#">topic1</a></li>
-                        <li><a href="#">topic2</a></li>
-                        <li><a href="#">topic3</a></li>
+                        <li><a href="./controverse_langage.html">Controverse Langage</a></li>
+                        <li><a href="./controverse_norme.html">Controverse Norme</a></li>
+                        <li><a href="./controverse_detournement.html">Controverse Détournement</a></li>
                       </ul>
                     </li>
                     <!--End of dropdown-->
@@ -72,6 +72,7 @@
         </div>
         <!-- /.container -->
     </nav>
+    <!--End of nav-->
 
     <div class="wrapper">
       <!-- section header-->
@@ -123,10 +124,10 @@
               <!-- Wrapper for slides -->
               <div class="carousel-inner" role="listbox">
                 <div class="item active">
-                  <img src="img/wall-1.jpg" alt="descrption">
+                  <!--<img src="img/wall-1.jpg" alt="descrption">-->
                   <div class="carousel-caption">
                     <h3>Arbre des débats</h3>
-                  </p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+                      lor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
                   </div>
                 </div>
                 <!--slide 1-->
