--- a/Web/www/graphiques.html
+++ b/Web/www/graphiques.html
@@ -49,16 +49,16 @@
                     <ul class="dropdown-menu">
                       <li><a href="#arbre-debats" >Arbre des débats</a></li>
                       <li><a href="#frise-chronologique">Frise chronologique</a></li>
-                      <li><a href="#">Cartographie des acteurs</a></li>
+                      <li><a href="#cartographie-des-acteurs">Cartographie des acteurs</a></li>
                     </ul>
                   </li>
 
                   <li class="dropdown">
                     <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Développment <span class="caret"></span></a>
                     <ul class="dropdown-menu">
-                      <li><a href="./politique.html">Politique et Droit</a></li>
-                      <li><a href="#">topic2</a></li>
-                      <li><a href="#">topic3</a></li>
+                      <li><a href="./controverse_langage.html">Controverse Langage</a></li>
+                      <li><a href="./controverse_norme.html">Controverse Norme</a></li>
+                      <li><a href="./controverse_detournement.html">Controverse Détournement</a></li>
                     </ul>
                   </li>
                   <!--End of dropdown-->
@@ -73,6 +73,23 @@
   </nav>
 
   <div class="wrapper">
+
+    <div class="section" id = "arbre-debats">
+      <div class="text-area">
+        <div class="container">
+            <div class="row">
+                <div class="title" >
+                    <h2>Arbre des débats</h2>
+                    <div class="separator-container">
+                        <div class="separator line-separator">∎</div>
+                    </div>
+                  </br>
+                  <iframe width='853' height='480' src='https://embed.coggle.it/diagram/WS3ja2NQaAAB_SfY/1c92c801dd3b2a8e0dc84f038bbdccee9c9a8966e48e8d9b254545b2dd918ff1' frameborder='0' allowfullscreen></iframe>
+                </div>
+            </div>
+          </div>
+        </div>
+      </div>
 
     <div class="section" id = "frise-chronologique">
       <div class="text-area">
@@ -91,22 +108,22 @@
         </div>
       </div>
 
-      <div class="section" id = "arbre-debats">
-        <div class="text-area">
-          <div class="container">
-              <div class="row">
-                  <div class="title" >
-                      <h2>Arbre des débats</h2>
-                      <div class="separator-container">
-                          <div class="separator line-separator">∎</div>
-                      </div>
-                    </br>
-                    <iframe width='853' height='480' src='https://embed.coggle.it/diagram/WS3ja2NQaAAB_SfY/1c92c801dd3b2a8e0dc84f038bbdccee9c9a8966e48e8d9b254545b2dd918ff1' frameborder='0' allowfullscreen></iframe>
+        <div class="section" id = "cartographie-des-acteurs">
+          <div class="text-area">
+            <div class="container">
+                <div class="row">
+                    <div class="title" >
+                        <h2>Cartographie des acteurs</h2>
+                        <div class="separator-container">
+                            <div class="separator line-separator">∎</div>
+                        </div>
+                      </br>
+                      <iframe width='853' height='480' src='https://embed.coggle.it/diagram/WS511mNQaAAB_yhA/5454d20b6a1f60228917d5b9bf99c739139baaedcda077bd57f21515e43fd6f5' frameborder='0' allowfullscreen></iframe>
+                    </div>
                   </div>
+                </div>
               </div>
-            </div>
           </div>
-        </div>
 
       <footer>
         <nav>
