--- a/Web/www/index.html
+++ b/Web/www/index.html
@@ -50,7 +50,7 @@
                       <ul class="dropdown-menu">
                         <li><a href="./graphiques.html#arbre-debats">Arbre des débats</a></li>
                         <li><a href="./graphiques.html#frise-chronologique">Frise chronologique</a></li>
-                        <li><a href="./graphiques.html">Cartographie des acteurs</a></li>
+                        <li><a href="./graphiques.html#cartographie-des-acteurs">Cartographie des acteurs</a></li>
                       </ul>
                     </li>
 
@@ -86,7 +86,7 @@
                             <div class="separator-container">
                                 <div class="separator line-separator">∎</div>
                             </div>
-                            <h5>bla bla bla bla bla bla</h5>
+                            <h5>Enjeux des Technologies de l'Information et de la Communication à Télécom ParisTech</h5>
                         </div>
                     </div>
                 </div>
