--- a/Web/www/politique.html
+++ b/Web/www/politique.html
@@ -74,7 +74,7 @@
     </nav>
 
     <div class="wrapper">
-      <div class="section" id = "frise-chronologique">
+      <div class="section">
         <div class="text-area">
           <div class="container">
               <div class="row">
