--- a/Web/www/template.html
+++ b/Web/www/template.html
@@ -50,7 +50,7 @@
                       <ul class="dropdown-menu">
                         <li><a href="./graphiques.html#arbre-debats">Arbre des débats</a></li>
                         <li><a href="./graphiques.html#frise-chronologique">Frise chronologique</a></li>
-                        <li><a href="./graphiques.html">Cartographie des acteurs</a></li>
+                        <li><a href="./graphiques.html#cartographie-des-acteurs">Cartographie des acteurs</a></li>
                       </ul>
                     </li>
 
