--- a/Web/www/controverse_detournement.html
+++ b/Web/www/controverse_detournement.html
@@ -85,7 +85,10 @@
                       </div>
                     </br>
 
-                      <h3>Presse et médias</h3>
+                      <a href="#">
+                        <h3 align="left">Presse et médias <i class="em em-newspaper"></i></h3>
+                      </a>
+                      <hr>
                       <p align="left">
                       Par ailleurs, une controverse fortement évoquée dans les médias est la relation emoji/ réseaux sociaux. Encore en 2014, on s’interrogeait sur le potentiel avenir qu’auraient les réseaux sociaux avec le développement des emojis, comme par exemple dans RSLN qui évoquait l’idée de quelques applications qui proposaient des échanges entre utilisateurs uniquement via les emojis. Mais aujourd’hui, les principaux réseaux sociaux ont tous un rapport particulier aux emojis. Twitter, dès 2014, présentait déjà 10% de tweets contenant un emoji. Instagram a permis quant à lui la possibilité de poster des hashtags en emoji, mais cependant a soulevé une question de fond, reprise par beaucoup de journalistes, relative à la censure. En effet, Instagram a interdit la recherche de l’emoji « aubergine ». Cela provient d’une autre controverse encore, qui est celle du caractère sexuel des emojis : il n’existe en effet aucun symbole explicite, mais beaucoup d’entre eux ont eu une signification détournée par la communauté sur les réseaux sociaux, comme l’aubergine par exemple. Enfin Facebook propose désormais de son côté de réagir aux statuts et commentaires par des emojis. Cette mise à jour a elle aussi été fortement critiquée par des journalistes, comme Emily Dreyfus, assimilant dans un article sur Wired ces réactions à celles d’un bébé de moins d’un an, démontrant ainsi encore une fois la régression de la société qu’entraînent les emojis.
                       </p>
@@ -94,8 +97,9 @@
             </div>
           </div>
         </div>
+      </div>
 
-    </div>
+      
     <footer>
       <nav>
             <p> © Copyright 2016 Télécom ParisTech </p>
