--- a/Web/www/controverse_norme.html
+++ b/Web/www/controverse_norme.html
@@ -85,21 +85,30 @@
                       </div>
                     </br>
 
-                      <h3>Presse et médias</h3>
+                      <a href="./propos.html#presse">
+                        <h3 align="left">Presse et médias <i class="em em-newspaper"></i></h3>
+                      </a>
+                      <hr>
                       <p align="left">
                       Un autre sujet de controverse plusieurs fois abordé dans les médias est le débat autour du consortium Unicode, qui est un acteur capital dans le thème des emojis. C’est en effet ce groupe qui s’occupe d’implémenter les nouveaux caractères qui apparaîtront sur les claviers dont on dispose. Mais de là découlent de nombreuses plaintes. En premier lieu, certains regrettent une certaine perte de noblesse d’Unicode, qui consacrerait désormais la majorité de son énergie autour des emojis, au détriment du développement de caractères plus « nobles », médiévaux par exemple, plus intéressants selon eux. En second lieu, la presse approche souvent le sujet d’un autre acteur de cette controverse : les minorités ethniques. Certaines se plaignent en effet de leur sous-représentation dans ce clavier. De nombreuses pétitions sont souvent signées pour pallier à ce problème. Cela a abouti d’ailleurs à la possibilité de choisir la couleur de peau de certains emojis. Des plaintes demeurent évidemment, pour des catégories de personnes toujours pas représentées (on trouve par exemple dans certains articles le cas des roux ou des hipsters).  Certains articles abordent d’ailleurs dans le même registre le « emoji feminism », comme son nom l’indique le féminisme relatif aux emojis, visant à obtenir une représentation égale homme/femme sur ces plateformes. Ce qui a d’ailleurs été obtenu puisque depuis une certaine mise à jour, chaque métier proposé par le clavier emoji est disponible en version masculine comme féminine.  La problématique ici est donc la question pour Unicode, l’acteur principal, de trouver le bon équilibre satisfaisant les autres acteurs comme les minorités ethniques, tout en ayant un nombre de caractères non excessif.
                       </p>
 
-                      <h3>Expertise scientifique et technique</h3>
+                      <a href="./propos.html#expertise">
+                        <h3 align="left">Expertise scientifique et technique <i class="em em-school"></i></h3>
+                      </a>
+                      <hr>
                       <p align="left">
                         Avec leur succès, les emojis n'ont pas tardé à susciter envie et jalousie. Jugés trop « blancs », jamais roux, trop sexistes, ne reflétant pas assez la diversité de la société, plusieurs pétitions en ligne sont apparues blâmant ceux qui les diffusent. Ainsi, c’est Apple, Microsoft ou Google qui se retrouvent au centre des polémiques car ces diffuseurs sont aussi membres de l'Unicode Consortium, l'organisme international qui s'est fixé pour charte de « développer, maintenir en l'état et promouvoir des standards internationaux pour les logiciels et les données [...] afin de pouvoir représenter des symboles de la même manière sur tous les supports modernes » et qui donc s’occupe de décider quels émojis entreront sur le clavier standard. Dans le cas, du manque de couleur de peau, ils ont dû inventer une nouvelle façon d’obtenir l’émoji sur le clavier, qui est d’appuyer sur l’émoji un laps de temps jusqu’à ce que la fenêtre avec toutes les couleurs différentes s’ouvre. Afin de ne pas utiliser trop de place dans la norme Unicode (codé sur 16 bits), les émojis sont créés en associant l’émoji originel et la couleur de peau. C’est la même méthode qui a été utilisée pour créer des émojis où les professions pouvaient être représentées par des femmes.
                       </p>
 
-                      <h3>politique et droit</h3>
+                      <a href="./propos.html#politique">
+                        <h3 align="left">politique et droit<i class="em em-notebook_with_decorative_cover"></i></h3>
+                      </a>
+                      <hr>
                       <p align="left">
                         Les acteurs politiques de la scène de l'émojis sont plutôt limités, car aucun projet de loi visant spécifiquement les caractères unicode ou les émojis en particulier n'a été lancé dans aucun pays. Ainsi, l'acteur principal de la scène émoji est le consortium unicode, qui gère le standard des caractères spéciaux. Certaine affaires juridiques font intervenir (souvent de loin) les émojis, et les sentences données par les juges font loi pour le moment.
                       </p>
-                        <h4> Le consortium Unicode</h4>
+                        <h4 align="left"> Le consortium Unicode</h4>
                       <p align="left">
                         Le consortium Unicode fut instauré en janvier 1991 en Californie, quatre ans après la fondation de l'encodage de caractères spéciaux.
 Unicode fut d'abord un projet lancé en 1987 après des échanges entre les ingénieurs d'Apple et de Xerox : Joe  Becker, Lee Collins et Mark Davis. Dès début 1988, trois enquêtes principales avaient été menées :
@@ -130,7 +139,7 @@ L'organe du Consortium chargé des émojis est le sous-comité Unicode pour les 
 Ce comité se réunit toutes les semaines et tous les membres du consortium Unicode peuvent participer et demander à être ajouté à la mailing list du sous-comité. Ce dernier met à jour la liste des émojis standards tous les ans en mai.
                       </p>
 
-                      <h4>Les OS</h4>
+                      <h4 align="left">Les OS</h4>
                       <p align="left">
                         Les grandes marques sont des membres permanents du comité Unicode : Adobe, Apple, Facebook, Google, Huawei, IBM, Microsoft… C'est donc elles qui votent les mesures prises et ont le pouvoir décisionnel au sein du consortium.
   Même si elles ont le contrôle sur la liste des émojis standards, certains OS ne proposent pas tous les émojis disponibles sur leur clavier standard. L'installation d'applications spécialisée permet cependant de contourner le problème.
@@ -139,7 +148,7 @@ Ce comité se réunit toutes les semaines et tous les membres du consortium Unic
   Cependant, il existe des émojis dépourvus de copyright en opensource (ex : Moji)
                       </p>
 
-                      <h4>Les juges</h4>
+                      <h4 align="left">Les juges</h4>
                       <p align="left">
                       Les émojis sont intervenus dans quelques affaires juridiques, où un parti prétend généralement que les émojis avaient valeur de déclaration (par exemple, que ";)" a valeur de consentement pour le sexe ou que ":P" signifie que le message est à prendre au second degré) et à chaque fois les juges ont refusé l'interprétation proposée. L'argument justifiant le refus est que l'émoji peut avoir beaucoup d'interprétations différentes et pas forcément celle avancée en particulier. Ainsi, légalement, un émoji n'a pas vraiment de valeur définitive.
                       </p>
