--- a/Web/www/propos.html
+++ b/Web/www/propos.html
@@ -63,7 +63,6 @@
                       </ul>
                     </li>
                     <!--End of dropdown-->
-                    <li><a href="./module.html">Module</a></li>
                     <li><a href="./propos.html">A propos</a></li>
                   </u1>
                 </ul>
@@ -93,28 +92,22 @@
                       <h3 align="left" id = "expertise">Expertise scientifique et technique <i class="em em-school"></i></h3>
                       <hr>
 
-                      <h3 align="left" id = "politique">politique et droit<i class="em em-notebook_with_decorative_cover"></i></h3>
+                      <h3 align="left" id = "politique">Politique et droit <i class="em em-notebook_with_decorative_cover"></i></h3>
                       <hr>
 
-                      <h3 align="left" id = "societe">Société civile<i class="em em-busts_in_silhouette"></i></h3>
+                      <h3 align="left" id = "societe">Société civile <i class="em em-busts_in_silhouette"></i></h3>
                       <hr>
 
-                      <h3 align="left" id = "entretiens">Entretiens<i class="em em-pencil"></i></h3>
+                      <h3 align="left" id = "entretiens">Entretiens <i class="em em-pencil"></i></h3>
                       <hr>
 
-                      <h3 align="left" id = "design">Design Web<i class="em em-art"></i></h3>
+                      <h3 align="left" id = "design">Design Web <i class="em em-art"></i></h3>
                       <hr>
 
-                      <h3 align="left" id = "integration">Intégration Web<i class="em em-octocat"></i> - Jin XIA</h3>
+                      <h3 align="left" id = "integration">Intégration Web <i class="em em-octocat"></i> - Jin XIA</h3>
                       <hr>
-
-
-
-
-
-
                       <p align="left">
-                      Par ailleurs, une controverse fortement évoquée dans les médias est la relation emoji/ réseaux sociaux. Encore en 2014, on s’interrogeait sur le potentiel avenir qu’auraient les réseaux sociaux avec le développement des emojis, comme par exemple dans RSLN qui évoquait l’idée de quelques applications qui proposaient des échanges entre utilisateurs uniquement via les emojis. Mais aujourd’hui, les principaux réseaux sociaux ont tous un rapport particulier aux emojis. Twitter, dès 2014, présentait déjà 10% de tweets contenant un emoji. Instagram a permis quant à lui la possibilité de poster des hashtags en emoji, mais cependant a soulevé une question de fond, reprise par beaucoup de journalistes, relative à la censure. En effet, Instagram a interdit la recherche de l’emoji « aubergine ». Cela provient d’une autre controverse encore, qui est celle du caractère sexuel des emojis : il n’existe en effet aucun symbole explicite, mais beaucoup d’entre eux ont eu une signification détournée par la communauté sur les réseaux sociaux, comme l’aubergine par exemple. Enfin Facebook propose désormais de son côté de réagir aux statuts et commentaires par des emojis. Cette mise à jour a elle aussi été fortement critiquée par des journalistes, comme Emily Dreyfus, assimilant dans un article sur Wired ces réactions à celles d’un bébé de moins d’un an, démontrant ainsi encore une fois la régression de la société qu’entraînent les emojis.
+                      Avec notre groupe, nous arrivons à créer le site. Nous utilison framework Bootstrap. Le site <a href="http://presentation.creative-tim.com">http://presentation.creative-tim.com/</a> est la référence de notre site. Nous avons aussi ajouté beaucoup des émojis qui sont liés à notre controverse : tous les icons sont des émojis et le curseur devient aussi des emojis dans certains endroits. Les sources des émojis sont <a href="https://afeld.github.io/emoji-css/">https://afeld.github.io/emoji-css/</a> et <a href="https://www.emojione.com/developers/download">https://www.emojione.com/developers/download/</a>.
                       </p>
                   </div>
               </div>
