--- a/Web/www/controverse_detournement.html
+++ b/Web/www/controverse_detournement.html
@@ -82,16 +82,74 @@
                       <div class="separator-container">
                           <div class="separator line-separator">∎</div>
                       </div>
+                  </div>
                     </br>
 
-                      <a href="#">
+                      <blockquote>
+                        Une controverse fortement évoquée dans les médias est la relation emoji/ réseaux sociaux. Aujourd’hui, les principaux réseaux sociaux ont tous un rapport particulier aux emojis. Instagram a permis la possibilité de poster des hashtags en emoji, mais cependant a soulevé une question de fond, reprise par beaucoup de journalistes, relative à la censure. il s’agit ici du caractère sexuel que peuvent prendre des emojis : il n’existe en effet aucun symbole explicite, mais beaucoup d’entre eux ont eu une signification détournée par la communauté sur les réseaux sociaux.
+                      </blockquote>
+
+
+                      <a href="./propos.html#presse">
                         <h3 align="left">Presse et médias <i class="em em-newspaper"></i></h3>
                       </a>
                       <hr>
                       <p align="left">
-                      Par ailleurs, une controverse fortement évoquée dans les médias est la relation emoji/ réseaux sociaux. Encore en 2014, on s’interrogeait sur le potentiel avenir qu’auraient les réseaux sociaux avec le développement des emojis, comme par exemple dans RSLN qui évoquait l’idée de quelques applications qui proposaient des échanges entre utilisateurs uniquement via les emojis. Mais aujourd’hui, les principaux réseaux sociaux ont tous un rapport particulier aux emojis. Twitter, dès 2014, présentait déjà 10% de tweets contenant un emoji. Instagram a permis quant à lui la possibilité de poster des hashtags en emoji, mais cependant a soulevé une question de fond, reprise par beaucoup de journalistes, relative à la censure. En effet, Instagram a interdit la recherche de l’emoji « aubergine ». Cela provient d’une autre controverse encore, qui est celle du caractère sexuel des emojis : il n’existe en effet aucun symbole explicite, mais beaucoup d’entre eux ont eu une signification détournée par la communauté sur les réseaux sociaux, comme l’aubergine par exemple. Enfin Facebook propose désormais de son côté de réagir aux statuts et commentaires par des emojis. Cette mise à jour a elle aussi été fortement critiquée par des journalistes, comme Emily Dreyfus, assimilant dans un article sur Wired ces réactions à celles d’un bébé de moins d’un an, démontrant ainsi encore une fois la régression de la société qu’entraînent les emojis.
+                        Une controverse fortement évoquée dans les médias est la relation emoji/ réseaux sociaux. Encore en 2014, on s’interrogeait sur le potentiel avenir qu’auraient les réseaux sociaux avec le développement des emojis, comme par exemple dans RSLN qui évoquait l’idée de quelques applications qui proposaient des échanges entre utilisateurs uniquement via les emojis.
+                      </br>
+                    </br>
+
+                        Mais aujourd’hui, les principaux réseaux sociaux ont tous un rapport particulier aux emojis. Twitter, dès 2014, présentait déjà 10% de tweets contenant un emoji. Instagram a permis quant à lui la possibilité de poster des hashtags en emoji, mais cependant a soulevé une question de fond, reprise par beaucoup de journalistes, relative à la censure. En effet, Instagram a interdit la recherche de l’emoji « aubergine ». Cela provient d’une autre controverse encore, qui est
+                        celle du caractère sexuel des emojis : il n’existe en effet aucun symbole explicite, mais beaucoup d’entre eux ont eu une signification détournée par la communauté sur les réseaux sociaux, comme l’aubergine par exemple.
+                      </br>
+                      </br>
+
+                        Enfin Facebook propose désormais de son côté de réagir aux statuts et commentaires par des emojis. Cette mise à jour a elle aussi été fortement critiquée par des journalistes, comme Emily Dreyfus, assimilant dans un article sur Wired ces réactions à celles d’un bébé de moins d’un an, démontrant ainsi encore une fois la régression de la société qu’entraînent les emojis.
+
                       </p>
-                  </div>
+
+                      <a href="./propos.html#entretiens">
+                        <h3 align="left">Entretiens<i class="em em-pencil"></i></h3>
+                      </a>
+                      <hr>
+                      <a href="./propos.html#entretiens"><h4><u>Entretien du 23 Mai 2017 avec Vincent Manilève</u></h4></a>
+                      <p align="left">
+
+                        A propos du détournement des émojis, nous revenons d’abord avec Vincent Manilève sur les règles établies ou non autour de l’utilisation des émojis. Concernant leur utilisation, “chacun fait son tri, chacun associe une signification aux émojis.” Suivant les personnes, l’usage est différent. On a aussi “une influence du groupe qui inscrit une signification collective” comme les exemples de l’aubergine sur Instagram ou de l’ancienne forme de l’émoji pêche qui était très proche de la forme des fesses.
+                      </br>
+                        Les gens ont de manière général “une capacité à se réapproprier les émojis et c’est là toute la culture internet.” Elle encourage les détournements comme aujourd’hui avec les «memes». Le journaliste nous spécifie que “le nombre de répétition de l’émoji peut apporter une signification particulière”. Les émojis apportent de la créativité,à titre d’exemple, Vincent Manilève nous confie “qu’ils ont a ajouté un émoji JUL au bureau.”
+                      </br>
+                    </br>
+                        Nous en avons profité pour aborder la censure de l’aubergine sur Instagram. La question de censure est un critère propre à la plateforme: “je ne suis pas sur que cela ait servi à grand chose, c’est plutôt un mauvais coup de pub.”
+                      </br>
+                    </br>
+                        Enfin, on a noté l’emploi des émojis lors de la dernière campagne politique, constituant une véritable une stratégie de communication. En effet, des statistiques ont montré les différents emplois des émojis. Pour le journaliste de Slate, “ce moyen de communication de marche pas vraiment. L’emploi des émojis n’apparaît pas comme naturel et fait que les politiques sont plutôt moqués à l’image du tweet de Florian Phillipot comprenant un chien et un chat lors de la campagne de Marine Le Pen.”
+                      </br>
+                        Lorsque les émojis entrent dans la sphère de la communication, “Internet reprend le contrôle” et plus précisément les utilisateurs.
+                      </p>
+
+                      <a href="./propos.html#societe">
+                        <h3 align="left">Société civile<i class="em em-busts_in_silhouette"></i></h3>
+                      </a>
+                      <hr>
+                      <p align="left">
+                        <h4><u>En savoir plus</u></h4>
+
+                        <a href="http://www.lessentiel.lu/fr/lifestyle/story/Voici-les-emojis-les-plus-efficaces-pour-la-drague-11796355">Les émojis et la drague</a>
+                      </br>
+                        <a href="https://www.youtube.com/watch?v=NUMl6S_KNj4">Interpretation des émojis</a>
+
+                      </br>
+                        <a href="https://www.youtube.com/watch?v=JqDJWGQbzMw">Emoji guide</a>
+                      </br>
+                        <a href="https://www.youtube.com/watch?v=vRNVf-1M7xQ">How to master emojis</a>
+                      </br>
+                        <a href="https://www.youtube.com/watch?v=utH_conF-gc">Comprendre les émojis</a>
+                      </br>
+                        <a href="https://grouplens.org/site-content/uploads/Emoji_Interpretation_Paper.pdf">Varying Interpretations of Emoji</a>
+                      </br>
+                        <a href="https://fr.slideshare.net/onprenduncafe/emoji-la-tendance">Les émojis tendance</a>
+                      </p>
               </div>
             </div>
           </div>
