--- a/Web/www/graphiques.html
+++ b/Web/www/graphiques.html
@@ -82,10 +82,10 @@
                     <div class="separator-container">
                         <div class="separator line-separator">∎</div>
                     </div>
-                  </br>
-                  <iframe width='853' height='480' src='https://embed.coggle.it/diagram/WS3ja2NQaAAB_SfY/1c92c801dd3b2a8e0dc84f038bbdccee9c9a8966e48e8d9b254545b2dd918ff1' frameborder='0' allowfullscreen></iframe>
                 </div>
-            </div>
+                  </br>
+                  <iframe width='100%' height='480' src='https://embed.coggle.it/diagram/WS3ja2NQaAAB_SfY/1c92c801dd3b2a8e0dc84f038bbdccee9c9a8966e48e8d9b254545b2dd918ff1' frameborder='0' allowfullscreen></iframe>
+                </div>
           </div>
         </div>
       </div>
@@ -99,10 +99,10 @@
                     <div class="separator-container">
                         <div class="separator line-separator">∎</div>
                     </div>
+                  </div>
                   </br>
                     <iframe src='https://cdn.knightlab.com/libs/timeline3/latest/embed/index.html?source=1pDgIOyWuwI58piVYQ762UFa284zM7I_o008-GjkeeIY&font=Default&lang=fr&initial_zoom=2&height=650' width='100%' height='650' webkitallowfullscreen mozallowfullscreen allowfullscreen frameborder='0'></iframe>
                 </div>
-            </div>
           </div>
         </div>
       </div>
@@ -116,9 +116,9 @@
                         <div class="separator-container">
                             <div class="separator line-separator">∎</div>
                         </div>
-                      </br>
-                      <iframe width='853' height='480' src='https://embed.coggle.it/diagram/WS511mNQaAAB_yhA/5454d20b6a1f60228917d5b9bf99c739139baaedcda077bd57f21515e43fd6f5' frameborder='0' allowfullscreen></iframe>
                     </div>
+                      </br>
+                      <iframe width='100%' height='480' src='https://embed.coggle.it/diagram/WS511mNQaAAB_yhA/5454d20b6a1f60228917d5b9bf99c739139baaedcda077bd57f21515e43fd6f5' frameborder='0' allowfullscreen></iframe>
                   </div>
                 </div>
               </div>
