--- a/Web/www/template.html
+++ b/Web/www/template.html
@@ -72,6 +72,21 @@
         <!-- /.container -->
     </nav>
     <!--End of nav-->
+    <a href="./propos.html#societe">
+      <h3 align="left">Société civile<i class="em em-busts_in_silhouette"></i></h3>
+    </a>
+    <hr>
+    <p align="left">
+      <h4>En savoir plus</h4>
+
+    </br>
+
+    </br>
+
+
+    </br>
+
+    </p>
 
     <footer>
       <nav>
