--- a/Web/www/controverse_detournement.html
+++ b/Web/www/controverse_detournement.html
@@ -133,7 +133,7 @@
                       </a>
                       <hr>
                       <p align="left">
-                        <h4><u>En savoir plus</u></h4>
+                        <h4>En savoir plus</h4>
 
                         <a href="http://www.lessentiel.lu/fr/lifestyle/story/Voici-les-emojis-les-plus-efficaces-pour-la-drague-11796355">Les émojis et la drague</a>
                       </br>
